--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  height: 700px;
   width: 100%;
+  height: 100%;
+  min-height: 700px;
   display: flex;
   background-position: top center;
   background-repeat: no-repeat;
@@ -11,38 +12,49 @@
   align-items: center;
 }
 
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movieDescription__information {
+  color: #21D07A;
+  text-align: left;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: large;
+  margin:0
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
+  flex-direction: row;
   display: flex;
+}
+
+.movieDescription {
+  background-color: rgba(0, 0, 0, 0.8);
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: flex;
+  padding-left: 10px;
+  width: 500px;
+}
+
+.h1 {
   color: white;
+  text-align: left;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.strong {
+  color: white;
+  text-align: left;
+  align-self: flex-start;
+  width:100%;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p {
+  text-align: left;
+
+}
+
+.span{
+  flex: 1 2;
+  justify-content: flex-start;
 }
