--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -58,3 +58,10 @@
   flex: 1 2;
   justify-content: flex-start;
 }
+.searchBox__container{
+  /*left: 100px;*/
+  /*top: 20px;*/
+  /*position: absolute;*/
+  width: 800px;
+  margin: 20px;
+}
