--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,12 +51,13 @@
 
 .p {
   text-align: left;
-
 }
 
-.span{
+.flexed-column{
   flex: 1 2;
-  justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
 .searchBox__container{
   /*left: 100px;*/
